2015-07-30  Aakash Jain  <aakash_jain@apple.com>

        Replace Google App Engine with AppScale
        https://bugs.webkit.org/show_bug.cgi?id=147178

        Reviewed by Daniel Bates.

        * fast/harness/results.html:

2015-07-30  Joonghun Park  <jh718.park@samsung.com>

        [EFL] Enable IndexedDB based on DatabaseProcess
        https://bugs.webkit.org/show_bug.cgi?id=147221

        Reviewed by Csaba Osztrogonác.

        * platform/efl/TestExpectations: Update IndexedDB test expectations.

2015-07-30  Nan Wang  <n_wang@apple.com>

        aria-liveregions-notifications tests are very flaky
        https://bugs.webkit.org/show_bug.cgi?id=147299
        <rdar://problem/21998675>

        Reviewed by Chris Fleizach.

        These tests were flaky because they relied on timer notification callbacks.
        Fixed these tests by using different objects to capture the notifications instead.

        * platform/mac/TestExpectations:
        * platform/mac/accessibility/aria-liveregions-notifications-always-sent-expected.txt:
        * platform/mac/accessibility/aria-liveregions-notifications-always-sent.html:
        * platform/mac/accessibility/aria-liveregions-notifications-expected.txt:
        * platform/mac/accessibility/aria-liveregions-notifications.html:

2015-07-30  Simon Fraser  <simon.fraser@apple.com>

        Selecting in an iframe can cause main page scrolling
        https://bugs.webkit.org/show_bug.cgi?id=147431
        rdar://problem/19244589

        Reviewed by Zalan Bujtas.
        
        Test that uses eventSender to select in an iframe after scrolling the
        main page.

        * fast/events/autoscroll-in-iframe-expected.txt: Added.
        * fast/events/autoscroll-in-iframe.html: Added.

2015-07-29  Matt Rajca  <mrajca@apple.com>

        Media Session: test Next/Previous Track media control events delivered to Content media sessions
        https://bugs.webkit.org/show_bug.cgi?id=147416

        Reviewed by Eric Carlson.
